# SENAC_PI_bancodedados2

./: .gitignore  Dockerfile  Homepage.py  README.md  README2.md  SETUP.md  Vídeo demonstrativo  Vídeo demonstrativo.md  docker-compose.yml  pyproject.toml  vídeo demonstrativo
pages/: 1_Desempenho_Comercial.py  2_Perfil_Cliente.py  3_Analise_Regional.py  4_Estrategia_MKT.py
