[tool.poetry]
name = "senac-pi-bancodedados2"
version = "0.1.0"
description = ""
authors = ["alinemorais <linianholete@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
